fixed an bug where special chars would break the highlighting

--- a/assets/css/common/post-single.css
+++ b/assets/css/common/post-single.css
@@ -299,7 +299,7 @@
 }
 
 .active {
-    font-weight: 500;
+    font-weight: 600;
 }
 
 .toc ul {
